# churnpulse-ml-cli

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
artifacts/: metadata.json  metrics.json
data/raw/: demo_churn.csv
examples/: metrics.sample.json  report.sample.md
reports/: report.md
src/churnpulse/: api.py  cli.py  config.py  data.py  pipeline.py  report.py  train.py
