[project]
name = "churnpulse"
version = "0.1.0"
description = "End-to-end churn ML pipeline + FastAPI service"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2",
  "numpy>=1.26",
  "scikit-learn>=1.5",
  "joblib>=1.4",
  "matplotlib>=3.9",
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "typer>=0.12"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "ruff>=0.6",
  "mypy>=1.11"
]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "B", "UP", "N"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
churnpulse = "churnpulse.cli:app"


